--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,14 @@
 .choresText {
-   color: black;
+   color: brown;
+   font-family: 'Times New Roman', Times, serif;
+   font-size: 1.1vw; 
+   font-style: italic;
+   
+   
 }
 
 .choresHeading {
-   color: black;
+   color: blueviolet;
+   text-decoration: underline;
+   
 }
